Update css - fix dark mode on mobile

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -31,11 +31,11 @@ text-align: right;
 }
 
 .schemebutton{
-  background: white;
   border: 1px solid #DDD;
   border-top: 1px solid transparent;
   padding: 2px 10px;
   border-radius: 0 0 5px 5px;
+  margin-bottom: 2px;
 }
 
 .scm-output > p {
@@ -46,7 +46,10 @@ margin: 0;
     margin-bottom: 10px;
 }
 
-.schemeblock, .scm-output, .grow-wrap, textarea {
+.schemeblock, .scm-output, .grow-wrap, textarea, .schemebutton {
+    background: white;
+    color: black;
+    font-size: 1rem;
     font-family: ui-monospace, 
              Menlo, Monaco, 
              "Cascadia Mono", "Segoe UI Mono", 
